@@ -14,12 +14,14 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mockito;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration;
-import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
-import org.springframework.boot.test.mock.mockito.SpyBean;
+import org.springframework.boot.security.autoconfigure.SecurityAutoConfiguration;
+import org.springframework.boot.security.autoconfigure.UserDetailsServiceAutoConfiguration;
+import org.springframework.boot.webmvc.test.autoconfigure.AutoConfigureMockMvc;
+import org.springframework.boot.webmvc.test.autoconfigure.WebMvcTest;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.test.context.ContextConfiguration;
+import org.springframework.test.context.bean.override.mockito.MockitoSpyBean;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
@@ -30,18 +32,19 @@ import org.springframework.web.bind.annotation.RestController;
 import java.util.regex.Pattern;
 
 @ExtendWith(SpringExtension.class)
-@WebMvcTest(value = {ErrorManagerTest.TestController.class}, excludeAutoConfiguration = SecurityAutoConfiguration.class)
+@WebMvcTest(value = {ErrorManagerTest.TestController.class}, excludeAutoConfiguration = { UserDetailsServiceAutoConfiguration.class , SecurityAutoConfiguration.class})
+@AutoConfigureMockMvc(addFilters = false)
 @ContextConfiguration(classes = {ErrorManagerTest.TestController.class, ErrorManager.class})
 class ErrorManagerTest {
 
-  private static final String EXPECTED_GENERIC_ERROR = "{\"code\":\"Error\",\"message\":\"Something gone wrong\"}";
-
+  public static final String EXPECTED_DEFAULT_ERROR = "{\"code\":\"Error\",\"message\":\"Something gone wrong\"}";
   @Autowired
   private MockMvc mockMvc;
 
-  @SpyBean
-  private TestController testControllerSpy;
   private static MemoryAppender memoryAppender;
+
+  @MockitoSpyBean
+  private TestController testControllerSpy;
 
   @RestController
   @Slf4j
@@ -61,14 +64,13 @@ class ErrorManagerTest {
   }
 
   @BeforeEach
-  void clearMemoryAppender(){
+  void clearAndAppendMemoryAppender(){
     memoryAppender.reset();
 
     ch.qos.logback.classic.Logger logger = (ch.qos.logback.classic.Logger) LoggerFactory.getLogger(ErrorManager.class.getName());
     logger.setLevel(ch.qos.logback.classic.Level.INFO);
     logger.addAppender(memoryAppender);
   }
-
 
   @Test
   void handleExceptionClientExceptionNoBody() throws Exception {
@@ -81,25 +83,30 @@ class ErrorManagerTest {
 
     checkStackTraceSuppressedLog(memoryAppender,
             "A ClientExceptionNoBody occurred handling request GET /test: HttpStatus 400 BAD_REQUEST - NOTFOUND ClientExceptionNoBody at it.gov.pagopa.common.web.exception.ErrorManagerTest\\$TestController.testEndpoint\\(ErrorManagerTest.java:[0-9]+\\)");
+
   }
 
   @Test
   void handleExceptionClientExceptionWithBody() throws Exception {
-    Mockito.doThrow(new ClientExceptionWithBody(HttpStatus.BAD_REQUEST, "Error", "Error ClientExceptionWithBody"))
+    Mockito.doThrow(new ClientExceptionWithBody(HttpStatus.BAD_REQUEST, "Error","Error ClientExceptionWithBody"))
             .when(testControllerSpy).testEndpoint();
 
     mockMvc.perform(MockMvcRequestBuilders.get("/test")
                     .contentType(MediaType.APPLICATION_JSON))
             .andExpect(MockMvcResultMatchers.status().isBadRequest())
-            .andExpect(MockMvcResultMatchers.content().json("{\"code\":\"Error\",\"message\":\"Error ClientExceptionWithBody\"}"));
+            .andExpect(MockMvcResultMatchers.jsonPath("$.code").value("Error"))
+            .andExpect(MockMvcResultMatchers.jsonPath("$.message").value("Error ClientExceptionWithBody"));
 
-    Mockito.doThrow(new ClientExceptionWithBody(HttpStatus.BAD_REQUEST, "Error","Error ClientExceptionWithBody", new Exception()))
+
+    Mockito.doThrow(new ClientExceptionWithBody(HttpStatus.BAD_REQUEST, "Error","Error ClientExceptionWithBody", new Throwable()))
             .when(testControllerSpy).testEndpoint();
 
     mockMvc.perform(MockMvcRequestBuilders.get("/test")
                     .contentType(MediaType.APPLICATION_JSON))
             .andExpect(MockMvcResultMatchers.status().isBadRequest())
-            .andExpect(MockMvcResultMatchers.content().json("{\"code\":\"Error\",\"message\":\"Error ClientExceptionWithBody\"}"));
+            .andExpect(MockMvcResultMatchers.jsonPath("$.code").value("Error"))
+            .andExpect(MockMvcResultMatchers.jsonPath("$.message").value("Error ClientExceptionWithBody"));
+
   }
 
   @Test
@@ -111,7 +118,8 @@ class ErrorManagerTest {
     mockMvc.perform(MockMvcRequestBuilders.get("/test")
                     .contentType(MediaType.APPLICATION_JSON))
             .andExpect(MockMvcResultMatchers.status().isInternalServerError())
-            .andExpect(MockMvcResultMatchers.content().json(EXPECTED_GENERIC_ERROR));
+            .andExpect(MockMvcResultMatchers.jsonPath("$.code").value("Error"))
+            .andExpect(MockMvcResultMatchers.jsonPath("$.message").value("Something gone wrong"));
 
     checkStackTraceSuppressedLog(memoryAppender, "A ClientException occurred handling request GET /test: HttpStatus null - null at UNKNOWN");
     memoryAppender.reset();
@@ -122,10 +130,12 @@ class ErrorManagerTest {
     mockMvc.perform(MockMvcRequestBuilders.get("/test")
                     .contentType(MediaType.APPLICATION_JSON))
             .andExpect(MockMvcResultMatchers.status().isInternalServerError())
-            .andExpect(MockMvcResultMatchers.content().json(EXPECTED_GENERIC_ERROR));
+            .andExpect(MockMvcResultMatchers.jsonPath("$.code").value("Error"))
+            .andExpect(MockMvcResultMatchers.jsonPath("$.message").value("Something gone wrong"));
 
     checkStackTraceSuppressedLog(memoryAppender, "A ClientException occurred handling request GET /test: HttpStatus 400 BAD_REQUEST - ClientException with httpStatus and message at it.gov.pagopa.common.web.exception.ErrorManagerTest\\$TestController.testEndpoint\\(ErrorManagerTest.java:[0-9]+\\)");
     memoryAppender.reset();
+
 
     Mockito.doThrow(new ClientException(HttpStatus.BAD_REQUEST, "ClientException with httpStatus, message and throwable", new Throwable()))
             .when(testControllerSpy).testEndpoint();
@@ -133,7 +143,8 @@ class ErrorManagerTest {
     mockMvc.perform(MockMvcRequestBuilders.get("/test")
                     .contentType(MediaType.APPLICATION_JSON))
             .andExpect(MockMvcResultMatchers.status().isInternalServerError())
-            .andExpect(MockMvcResultMatchers.content().json(EXPECTED_GENERIC_ERROR));
+            .andExpect(MockMvcResultMatchers.jsonPath("$.code").value("Error"))
+            .andExpect(MockMvcResultMatchers.jsonPath("$.message").value("Something gone wrong"));
 
     checkLog(memoryAppender,
             "Something went wrong handling request GET /test: HttpStatus 400 BAD_REQUEST - ClientException with httpStatus, message and throwable",
@@ -150,17 +161,20 @@ class ErrorManagerTest {
     mockMvc.perform(MockMvcRequestBuilders.get("/test")
                     .contentType(MediaType.APPLICATION_JSON))
             .andExpect(MockMvcResultMatchers.status().isInternalServerError())
-            .andExpect(MockMvcResultMatchers.content().json(EXPECTED_GENERIC_ERROR));
+            .andExpect(MockMvcResultMatchers.jsonPath("$.code").value("Error"))
+            .andExpect(MockMvcResultMatchers.jsonPath("$.message").value("Something gone wrong"));
+
   }
 
   public static void checkStackTraceSuppressedLog(MemoryAppender memoryAppender, String expectedLoggedMessage) {
-    String loggedMessage = memoryAppender.getLoggedEvents().get(0).getFormattedMessage();
+    String loggedMessage = memoryAppender.getLoggedEvents().getFirst().getFormattedMessage();
     Assertions.assertTrue(Pattern.matches(expectedLoggedMessage, loggedMessage),
             "Unexpected logged message: " + loggedMessage);
   }
 
+
   public static void checkLog(MemoryAppender memoryAppender, String expectedLoggedMessageRegexp, String expectedLoggedExceptionMessage, String expectedLoggedExceptionOccurrencePosition) {
-    ILoggingEvent loggedEvent = memoryAppender.getLoggedEvents().get(0);
+    ILoggingEvent loggedEvent = memoryAppender.getLoggedEvents().getFirst();
     IThrowableProxy loggedException = loggedEvent.getThrowableProxy();
     StackTraceElementProxy loggedExceptionOccurrenceStackTrace = loggedException.getStackTraceElementProxyArray()[0];
 
